# optimize

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/scripts/: post_coverage_comment.js
.github/workflows/: build_and_lint.yml  build_and_test.yml  build_and_test_alloc.yml  build_and_test_app.yml  build_and_test_evol.yml  build_and_test_gen.yml  build_and_test_markov.yml  build_and_test_matrix.yml  build_and_test_neural.yml  build_and_test_regret.yml  build_and_test_solver.yml  build_and_test_utils.yml  coverage.yml  docs.yml  release.yml
alloc/: Cargo.toml
alloc/src/: alloc_manager.rs  lib.rs  memory_counter.rs
app/: Cargo.toml
app/src/: evaluate.rs  nn_generator.rs  nn_solver.rs  predict.rs  train.rs
benches/: bench_bounded.rs  bench_ordinary.rs
docs/: API.md  ARCHITECTURE.md  COVERAGE.md  DEVELOPMENT.md  PER_CRATE_WORKFLOWS.md  TUTORIALS.md
evaluate/: all.html  fn.main.html  index.html  struct.Args.html  struct.FileDataImporter.html
evol/: Cargo.toml
evol/benches/: bench_bounded.rs  bench_ordinary.rs
evol/src/: lib.rs  phenotype.rs  rng.rs
evol/src/evolution/: challenge.rs  launcher.rs  options.rs  parallel_launcher.rs
evol/src/strategy/: adjust.rs  bounded.rs  mod.rs  ordinary.rs
evol/tests/: test_adjust.rs  test_bounded.rs  test_ordinary.rs
learn/: all.html  index.html  sidebar-items.js
learn/evol/: index.html  sidebar-items.js
learn/evol/evolution/: index.html  sidebar-items.js
learn/evol/phenotype/: index.html  sidebar-items.js  trait.Phenotype.html
learn/evol/rng/: index.html  sidebar-items.js  struct.RandomNumberGenerator.html
learn/evol/strategy/: index.html  sidebar-items.js  trait.BreedStrategy.html
learn/neural/: index.html  sidebar-items.js
learn/neural/activation/: index.html  sidebar-items.js
learn/neural/layer/: index.html  sidebar-items.js
learn/neural/mat/: index.html  sidebar-items.js
learn/neural/nn/: index.html  sidebar-items.js
learn/neural/training/: index.html  sidebar-items.js
markov/: Cargo.toml
markov/src/: lib.rs  quantum.rs  solver.rs
matrix/: Cargo.toml
matrix/benches/: matrix_operations.rs
matrix/src/: ai_types.rs  composite_matrix.rs  composite_matrix_buffer.rs  composite_matrix_view.rs  directory.rs  lib.rs  mat.rs  matrix_buffer.rs  matrix_view.rs  persistable_matrix.rs  sum_mat.rs
matrix/src/persist/: cpu_matrix.rs  mod.rs  persist_impl.rs  traits.rs  wrapped.rs
matrix/tests/: test_matrix_properties.rs  test_sum_mat.rs
neural/: Cargo.toml
neural/internal_model_1/: shape.yaml
neural/internal_model_1/layers/: layer_0.txt  layer_1.txt
neural/src/: lib.rs
neural/src/activation/: activate.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
neural/src/layer/: dense_layer.rs  layer_factory.rs  layer_trait.rs  matrix_extensions.rs  mod.rs  stretch_layer.rs
neural/src/mat/: matrix.rs
neural/src/nn/: directory.rs  either_nn.rs  mod.rs  neuralnet.rs  nn_factory.rs  nn_trait.rs  retry_nn.rs  shape.rs
neural/src/training/: mod.rs  training_data.rs  training_params.rs  training_session.rs  training_settings.rs
neural/src/utilities/: mod.rs  safer.rs  util.rs
neural/test_transfer_stretch_trainable_1/temp_biases/: matrix_composite_0_0.txt
neural/test_transfer_stretch_trainable_1/temp_weights/: matrix_composite_0_0.txt
neural/tests/: integration_test.rs  test_model_persistence.rs
neural/tests/test_model_persistence_3/: shape.yaml
nn_generator/: all.html  fn.main.html  index.html  struct.Args.html  struct.FileDataImporter.html
predict/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html  struct.FileDataImporter.html
regret/: Cargo.toml
regret/src/: lib.rs  mod.rs  percentage_tree.rs  provider.rs  regret_node.rs  roshambo.rs  solver_node.rs  tests.rs  user_data.rs
search.desc/evaluate/: evaluate-desc-0-.js
search.desc/learn/: learn-desc-0-.js
search.desc/nn_generator/: nn_generator-desc-0-.js
search.desc/predict/: predict-desc-0-.js
search.desc/train/: train-desc-0-.js
solver/: Cargo.toml
solver/src/: lib.rs  neural_children_provider.rs  neural_expected_value_provider.rs  neural_solver.rs  neural_state.rs
solver/tests/: integration_test.rs
src/: evaluate.rs  lib.rs  main.rs  nn_generator.rs  predict.rs  train.rs
src/alloc/: alloc_manager.rs  allocatable.rs
src/evaluate/: evaluate.rs.html
src/evol/: phenotype.rs  rng.rs
src/evol/evolution/: challenge.rs  launcher.rs  mod.rs  options.rs  parallel_launcher.rs
src/evol/strategy/: adjust.rs  bounded.rs  mod.rs  ordinary.rs
src/learn/: lib.rs.html
src/learn/evol/: mod.rs.html  phenotype.rs.html  rng.rs.html
src/learn/neural/: mod.rs.html
src/neural/: mod.rs
src/neural/activation/: activate.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/neural/layer/: convolutional_layer.rs  dense_layer.rs  layer_trait.rs  mod.rs
src/neural/mat/: matrix.rs
src/neural/nn/: directory.rs  either_nn.rs  mod.rs  neuralnet.rs  nn_factory.rs  nn_trait.rs  retry_nn.rs  shape.rs
src/neural/training/: data_importer.rs  mod.rs  training_params.rs  training_session.rs
src/neural/utilities/: layer_alloc.rs  mod.rs  trainable_layer_alloc.rs  util.rs
src/nn/: mod.rs
src/nn/activation/: activate.rs  mod.rs  relu.rs  sigmoid.rs  tanh.rs
src/nn/layer/: dense_layer.rs  layer.rs  mod.rs
src/nn/neuralnet/: mod.rs  neuralnet.rs  shape.rs
src/nn_generator/: nn_generator.rs.html
src/predict/: predict.rs.html
src/regret/: mod.rs  regret_node.rs  solver_node.rs
src/train/: train.rs.html
tests/: test_adjust.rs  test_bounded.rs  test_model_persistence.rs  test_nn_breeding.rs  test_nn_generator.rs  test_ordinary.rs
tests/test_model_generation/: shape.yaml
train/: all.html  fn.main.html  index.html  struct.Args.html  struct.FileDataImporter.html
trait.impl/core/clone/: trait.Clone.js
utils/: Cargo.toml
utils/src/: lib.rs  safer.rs
utils/tests/: test_safer.rs
(+150 files in other folders)
