[package]
name = "learn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dyn-clone = "1.0"
csv = "1.1"
rayon = "1.7"
indicatif = "0.17"
once_cell = "1.18"
fs2 = "0.4"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_ordinary"
harness = false

[[bench]]
name = "bench_bounded"
harness = false

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "nn_generator"
path = "src/nn_generator.rs"

[[bin]]
name = "evaluate"
path = "src/evaluate.rs"

[[bin]]
name = "predict"
path = "src/predict.rs"
