[package]
name = "alloc"
version = "0.1.0"
edition = "2021"
description = "The allocation part of the learn project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "neural-networks"]
categories = ["science", "machine-learning"]
readme = "../README.md"

[dependencies]
utils = { path = "../utils" }
