[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "The binaries of the project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "neural-networks"]
categories = ["science", "machine-learning"]
readme = "../README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"

evol = { path = "../evol" }
neural = { path = "../neural" }
gen = { path = "../gen" }

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "nn_generator"
path = "src/nn_generator.rs"

[[bin]]
name = "evaluate"
path = "src/evaluate.rs"

[[bin]]
name = "predict"
path = "src/predict.rs"
