[package]
name = "evol"
version = "0.1.0"
edition = "2021"
description = "The evolutional learning part of the project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "neural-networks"]
categories = ["science", "machine-learning"]

[dependencies]
rand = "0.8.5"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_ordinary"
harness = false

[[bench]]
name = "bench_bounded"
harness = false
