[package]
name = "markov"
version = "0.1.0"
edition = "2021"
description = "The markov part of the project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "markov"]
categories = ["science", "machine-learning"]
readme = "../README.md"

[dependencies]
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }

matrix = { path = "../matrix" }
regret = { path = "../regret" }
utils = { path = "../utils" }
