[package]
name = "matrix"
version = "0.1.0"
edition = "2021"
description = "The matrix part of the project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "matrices"]
categories = ["science", "machine-learning"]
readme = "../README.md"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dyn-clone = "1.0"
csv = "1.1"
rayon = "1.7"
indicatif = "0.17"
fs2 = "0.4"
num-traits = "0.2"

alloc = { path = "../alloc" }
utils = { path = "../utils" }
