[package]
name = "matrix"
version = "0.1.0"
edition = "2021"
description = "The matrix part of the project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "matrices"]
categories = ["science", "machine-learning"]
readme = "../README.md"

[dependencies]
rayon = "1.7"
num-traits = "0.2"

utils = { path = "../utils" }
