[package]
name = "matrix"
version = "0.1.0"
edition = "2021"
description = "The matrix part of the project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "matrices"]
categories = ["science", "machine-learning"]
readme = "../README.md"

[dependencies]
rand = "0.8.5"
rayon = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
fs2 = "0.4"

alloc = { path = "../alloc" }
utils = { path = "../utils" }

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "matrix_operations"
harness = false
