[package]
name = "regret"
version = "0.1.0"
edition = "2021"
description = "The regret part of the project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "neural-networks"]
categories = ["science", "machine-learning"]

[dependencies]
utils = { path = "../utils" }
