[package]
name = "regret"
version = "0.1.0"
edition = "2021"
description = "The regret part of the project"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "neural-networks"]
categories = ["science", "machine-learning"]
readme = "../README.md"

[dependencies]
utils = { path = "../utils" }
evol = { path = "../evol" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
