[package]
name = "solver"
version = "0.1.0"
edition = "2021"
description = "The solver part of the project combining neural and regret"
license = "MIT"
repository = "https://github.com/mpohl100/ml_rust"
keywords = ["machine-learning", "rust", "neural-networks"]
categories = ["science", "machine-learning"]
readme = "../README.md"

[dependencies]
neural = { path = "../neural" }
regret = { path = "../regret" }
utils = { path = "../utils" }
